Fix LocalDateTimeAttributeVisualisation (not possible to clear time field)