@@ -4,11 +4,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Set;
 
-import io.github.factoryfx.factory.util.LanguageText;
-import io.github.factoryfx.javafx.editor.DataEditor;
-import io.github.factoryfx.javafx.view.View;
-import io.github.factoryfx.javafx.view.ViewDescription;
-import io.github.factoryfx.javafx.view.container.ViewsDisplayWidget;
 import javafx.application.Application;
 import javafx.event.ActionEvent;
 import javafx.event.EventHandler;
@@ -20,12 +15,21 @@ import javafx.scene.layout.HBox;
 import javafx.stage.Stage;
 
 import io.github.factoryfx.factory.jackson.ObjectMapperBuilder;
+import io.github.factoryfx.factory.util.LanguageText;
 import io.github.factoryfx.javafx.UniformDesignBuilder;
 import io.github.factoryfx.javafx.css.CssUtil;
+import io.github.factoryfx.javafx.editor.DataEditor;
 import io.github.factoryfx.javafx.editor.attribute.AttributeVisualisationMappingBuilder;
 import io.github.factoryfx.javafx.util.UniformDesign;
+import io.github.factoryfx.javafx.view.View;
+import io.github.factoryfx.javafx.view.ViewDescription;
+import io.github.factoryfx.javafx.view.container.ViewsDisplayWidget;
 
 public class DataEditorIntegrationTest extends Application{
+
+    // start with
+    // --add-exports=javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.font=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.glass.utils=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.geom.transform=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.prism=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED --add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED --add-exports=javafx.base/com.sun.javafx.collections=ALL-UNNAMED --add-exports=javafx.base/com.sun.javafx=ALL-UNNAMED --add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED --add-exports=javafx.base/com.sun.javafx.logging=ALL-UNNAMED
+
 
     @Override
     public void start(Stage primaryStage) throws Exception {
